docs: add install link

--- a/package.json
+++ b/package.json
@@ -42,10 +42,7 @@
   "manifest": {
     "permissions": [
       "system.display",
-      "downloads",
-      "contextMenus",
-      "activeTab",
-      "scripting"
+      "downloads"
     ]
   }
 }
