--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,33 +1,33 @@
-name-template: 'v$NEXT_PATCH_VERSION 🌈'
-tag-template: 'v$NEXT_PATCH_VERSION'
+name-template: "v$NEXT_PATCH_VERSION 🌈"
+tag-template: "v$NEXT_PATCH_VERSION"
 categories:
-  - title: '🆕 Features'
+  - title: "🆕 Features"
     labels:
-      - 'feat'
-      - 'feature'
-      - 'enhancement'
-  - title: '🐛 Bug Fixes'
+      - "feat"
+      - "feature"
+      - "enhancement"
+  - title: "🐛 Bug Fixes"
     labels:
-      - 'fix'
-      - 'bugfix'
-      - 'bug'
-  - title: '🧰 Maintenance'
-    label: 'chore'
-  - title: '📖 Document'
-    label: 'doc'
-  - title: '🚀 CI/CD'
-    label: 'ci'
-change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
+      - "fix"
+      - "bugfix"
+      - "bug"
+  - title: "🧰 Maintenance"
+    label: "chore"
+  - title: "📖 Document"
+    label: "doc"
+  - title: "🚀 CI/CD"
+    label: "ci"
+change-template: "- $TITLE @$AUTHOR (#$NUMBER)"
 version-resolver:
   major:
     labels:
-      - 'major'
+      - "major"
   minor:
     labels:
-      - 'minor'
+      - "minor"
   patch:
     labels:
-      - 'patch'
+      - "patch"
   default: patch
 template: |
-  **Full Changelog**: https://github.com/GopeedLab/browser-extension/compare/$PREVIOUS_TAG...v$NEXT_PATCH_VERSION
+  $CHANGES
