--- a/.github/workflows/asset.yml
+++ b/.github/workflows/asset.yml
@@ -44,6 +44,7 @@ jobs:
       - name: Upload
         uses: softprops/action-gh-release@v2
         with:
+          tag_name: ${{ steps.get-release.outputs.tag_name }}
           files: |
             build/chrome-mv3-prod.zip
             build/firefox-mv2-prod.zip
