--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,3 +16,40 @@ jobs:
       - uses: release-drafter/release-drafter@v5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  build:
+    runs-on: ubuntu-latest
+    needs: [release]
+    steps:
+      - uses: actions/checkout@v3
+      - name: Cache pnpm modules
+        uses: actions/cache@v3
+        with:
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-
+      - uses: pnpm/action-setup@v2.2.4
+        with:
+          version: latest
+          run_install: true
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v3.4.1
+        with:
+          node-version: 16.x
+          cache: "pnpm"
+      - name: Build the extension
+        run: |
+          pnpm build --target=chrome-mv3
+          pnpm build --target=firefox-mv2
+      - uses: monkeyWie/get-latest-release@v2.1
+        id: get-release
+        with:
+          myToken: ${{ github.token }}
+      - name: Upload
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ steps.get-release.outputs.tag_name }}
+          files: |
+            build/chrome-mv3-prod.zip
+            build/firefox-mv2-prod.zip
