--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,9 +47,8 @@ jobs:
         with:
           myToken: ${{ github.token }}
       - name: Upload
-        uses: softprops/action-gh-release@v2
+        uses: shogo82148/actions-upload-release-asset@v1
         with:
-          tag_name: ${{ steps.get-release.outputs.tag_name }}
-          files: |
-            build/chrome-mv3-prod.zip
-            build/firefox-mv2-prod.zip
+          upload_url: ${{ steps.get-release.outputs.upload_url }}
+          asset_path: build/*.zip
+          overwrite: true
