--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gopeed-browser-extension",
   "displayName": "Gopeed",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Gopeed browser extension",
   "homepage": "https://gopeed.com",
   "author": "Levi",
@@ -41,8 +41,12 @@
   },
   "manifest": {
     "permissions": [
-      "system.display",
       "downloads"
-    ]
+    ],
+    "browser_specific_settings": {
+      "gecko": {
+        "id": "{c5d69a8f-2ed0-46a7-afa4-b3a00dc58088}"
+      }
+    }
   }
 }
