--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/x-date-pickers": "^6.19.4",
     "@plasmohq/messaging": "^0.6.1",
     "@plasmohq/storage": "^1.9.0",
+    "content-disposition": "^0.5.4",
     "plasmo": "0.84.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -34,6 +35,7 @@
     "@gopeed/types": "^1.3.7",
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
     "@types/chrome": "0.0.251",
+    "@types/content-disposition": "^0.5.8",
     "@types/node": "20.9.0",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
@@ -47,7 +49,8 @@
     ],
     "permissions": [
       "downloads",
-      "cookies"
+      "cookies",
+      "webRequest"
     ],
     "browser_specific_settings": {
       "gecko": {
