fix: missing cookie

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,14 +33,16 @@ jobs:
         with:
           version: latest
           run_install: true
-      - name: Use Node.js 16.x
+      - name: Use Node.js
         uses: actions/setup-node@v3.4.1
         with:
-          node-version: 16.x
+          node-version: 18.x
           cache: "pnpm"
       - name: Build the extension
         run: |
           pnpm build --target=chrome-mv3 --zip
+          rm -rf pacakge.json
+          mv package.firefox.json package.json
           pnpm build --target=firefox-mv2 --zip
       - uses: monkeyWie/get-latest-release@v2.1
         id: get-release
