--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@plasmohq/messaging": "^0.6.1",
     "@plasmohq/storage": "^1.9.0",
     "content-disposition": "^0.5.4",
-    "plasmo": "0.84.2",
+    "plasmo": "0.89.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-file-icon": "^1.4.0",
@@ -49,7 +49,8 @@
     ],
     "permissions": [
       "downloads",
-      "cookies"
+      "cookies",
+      "nativeMessaging"
     ],
     "browser_specific_settings": {
       "gecko": {
