--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,9 +40,15 @@ jobs:
           cache: "pnpm"
       - name: Build the extension
         run: |
+          # Build Chrome version first
           pnpm build --target=chrome-mv3 --zip
-          rm -rf pacakge.json
-          mv package.firefox.json package.json
+
+          # For Firefox build, merge manifest content
+          cat package.json | jq --slurpfile firefox firefox.manifest.json '.manifest = ($firefox[0] * .manifest)' > temp.json
+          rm -rf package.json
+          mv temp.json package.json
+
+          # Build Firefox version
           pnpm build --target=firefox-mv2 --zip
       - uses: monkeyWie/get-latest-release@v2.1
         id: get-release
