--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,9 +40,9 @@ jobs:
           cache: "pnpm"
       - name: Build the extension
         run: |
+          # Build Chrome version first
           pnpm build --target=chrome-mv3 --zip
-          rm -rf pacakge.json
-          mv package.firefox.json package.json
+          # Build Firefox version
           pnpm build --target=firefox-mv2 --zip
       - uses: monkeyWie/get-latest-release@v2.1
         id: get-release
