--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
       "downloads",
       "cookies",
       "nativeMessaging",
-      "notifications"
+      "notifications",
+      "contextMenus"
     ],
     "overrides": {
       "firefox": {
@@ -82,7 +83,8 @@
           "webRequestBlocking",
           "*://*/*",
           "nativeMessaging",
-          "notifications"
+          "notifications",
+          "contextMenus"
         ],
         "browser_specific_settings": {
           "gecko": {
